--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,15 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "mihajlo123",
-    "database": "eventPhotoApp",
+    "username": "username",
+    "password": "password",
+    "database": "databaseName",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "mihajlo123",
-    "database": "eventPhotoApp",
+    "password": "password",
+    "database": "databaseName",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
